# capture-macro

./: .cursorrules  .gitignore  README.md  pyproject.toml
.cursor/rules/: 열심히해.mdc
build_scripts/: build.bat  build.py  build.sh  build_spec.py
src/.ktx_macro_bak/: main.py
src/.ktx_macro_bak/core/: input_controller.py  macro_engine.py
src/.ktx_macro_bak/models/: __init__.py  macro_models.py
src/.ktx_macro_bak/ui/: action_editor.py  main_window.py
src/.ktx_macro_bak/utils/: config_validator.py  file_utils.py
src/ktx_macro/core/: image_matcher.py  input_controller.py  macro_engine.py  screen_capture.py  telegram_bot.py
src/ktx_macro/models/: macro_models.py
src/ktx_macro/ui/: __init__.py  action_editor.py  capture_dialog.py  key_capture_dialog.py  main_window.py  sequence_editor.py  settings_dialog.py  telegram_settings.py
src/ktx_macro/utils/: __init__.py  logger.py  system_utils.py
src/ktx_macro_bak/: __init__.py
src/ktx_macro_bak/core/: __init__.py  image_matcher.py  input_controller.py  macro_engine.py  screen_capture.py
src/ktx_macro_bak/models/: macro_models.py
src/ktx_macro_bak/ui/: action_editor.py  main_window.py
src/ktx_macro_bak/utils/: config_validator.py
src/macro/: main.py
src/macro/core/: __init__.py  global_hotkey_manager.py  image_matcher.py  input_controller.py  macro_engine.py  screen_capture.py  telegram_bot.py
src/macro/models/: __init__.py  macro_models.py
src/macro/ui/: action_editor.py  capture_dialog.py  key_capture_dialog.py  main_window.py  telegram_settings.py
